--- a/DesignPatterns/app/src/main/res/layout/activity_main.xml
+++ b/DesignPatterns/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.jimmy.designpatterns.MainActivity">
+<layout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    <data class="MainBinding">
 
-</android.support.constraint.ConstraintLayout>
+        <variable
+            name="OnClickListener"
+            type="android.view.View.OnClickListener" />
+    </data>
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/btn_factory"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:background="#99338787"
+            android:gravity="center"
+            android:onClick="@{OnClickListener}"
+            android:text="FactoryPattern"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/two"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="20dp"
+            android:background="#99338787"
+            android:gravity="center"
+            android:onClick="@{OnClickListener}"
+            android:text="F2"
+            android:textSize="22sp" />
+    </LinearLayout>
+
+</layout>
